--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "mongoose-sequence": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
